--- a/ScarletChaos/ScarletChaos.csproj
+++ b/ScarletChaos/ScarletChaos.csproj
@@ -79,7 +79,6 @@
   <ItemGroup>
     <Compile Include="DataUtility\IniFile.cs" />
     <Compile Include="DataUtility\ScreenSize.cs" />
-    <Compile Include="DataUtility\Vectors.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="GameInstance.cs" />
     <Compile Include="GraphicsOptions.cs" />
@@ -96,10 +95,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Icon.ico" />
+    <Content Include="Icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
@@ -108,6 +108,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContentPipeline\ScarletPipeline.csproj">
+      <Project>{66b36bc4-c3b4-41a1-8ee6-600a24765dbc}</Project>
+      <Name>ScarletPipeline</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
