--- a/ScarletMaps/ScarletMaps.csproj
+++ b/ScarletMaps/ScarletMaps.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{66B36BC4-C3B4-41A1-8EE6-600A24765DBC}</ProjectGuid>
+    <ProjectGuid>{358104D1-CAA3-4725-9469-23DD00B1579D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScarletPipeline</RootNamespace>
-    <AssemblyName>ScarletPipeline</AssemblyName>
+    <RootNamespace>ScarletMaps</RootNamespace>
+    <AssemblyName>ScarletMaps</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,7 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MonoGame.Framework, Version=3.7.0.1014, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,26 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PipeLine.cs" />
-    <Compile Include="TextureBatch.cs" />
-    <Compile Include="TextureContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\Maps\" />
-    <Folder Include="Assets\Music\" />
-    <Folder Include="Assets\Sounds\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Assets\Textures\Icon.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ScarletMaps\ScarletMaps.csproj">
-      <Project>{358104d1-caa3-4725-9469-23dd00b1579d}</Project>
-      <Name>ScarletMaps</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
