Added Lidgren networking, started implementing
Still a lot of work to do

--- a/ScarletMaps/ScarletMaps.csproj
+++ b/ScarletMaps/ScarletMaps.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -44,7 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ContentPipeline\ScarletPipeline.csproj">
+    <ProjectReference Include="..\ScarletPipeline\ScarletPipeline.csproj">
       <Project>{66b36bc4-c3b4-41a1-8ee6-600a24765dbc}</Project>
       <Name>ScarletPipeline</Name>
     </ProjectReference>
