--- a/ScarletChaos/ScarletChaos.csproj
+++ b/ScarletChaos/ScarletChaos.csproj
@@ -81,6 +81,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DataUtility\IniFile.cs" />
+    <Compile Include="DataUtility\PlayerOptions.cs" />
     <Compile Include="DataUtility\ScreenSize.cs" />
     <Compile Include="DebugLog.cs" />
     <Compile Include="Entities\EntityPlayer.cs" />
@@ -89,8 +90,10 @@
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="EntityAI\NpcAI.cs" />
     <Compile Include="GameInstance.cs" />
-    <Compile Include="GraphicsOptions.cs" />
+    <Compile Include="DataUtility\GraphicsOptions.cs" />
     <Compile Include="InputOptions.cs" />
+    <Compile Include="Networking\GameSession.cs" />
+    <Compile Include="Networking\NetworkMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataUtility\Teams.cs" />
@@ -120,10 +123,18 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ContentPipeline\ScarletPipeline.csproj">
-      <Project>{66b36bc4-c3b4-41a1-8ee6-600a24765dbc}</Project>
+    <ProjectReference Include="..\Lidgren.Network\Lidgren.Network.csproj">
+      <Project>{49ba1c69-6104-41ac-a5d8-b54fa9f696e8}</Project>
+      <Name>Lidgren.Network</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ScarletPipeline\ScarletPipeline.csproj">
+      <Project>{66B36BC4-C3B4-41A1-8EE6-600A24765DBC}</Project>
       <Name>ScarletPipeline</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Networking\NetworkMessages\Core\" />
+    <Folder Include="Networking\NetworkMessages\Entity\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
