--- a/ScarletChaos/ScarletChaos.csproj
+++ b/ScarletChaos/ScarletChaos.csproj
@@ -93,7 +93,8 @@
     <Compile Include="DataUtility\GraphicsOptions.cs" />
     <Compile Include="InputOptions.cs" />
     <Compile Include="Networking\GameSession.cs" />
-    <Compile Include="Networking\NetworkMessage.cs" />
+    <Compile Include="Networking\MSG.cs" />
+    <Compile Include="Networking\PlayerClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataUtility\Teams.cs" />
