--- a/ScarletMaps/ScarletMaps.csproj
+++ b/ScarletMaps/ScarletMaps.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MonoGame.Framework, Version=3.7.0.1014, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Map.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solid.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScarletPipeline\ScarletPipeline.csproj">
