--- a/ScarletChaos/ScarletChaos.csproj
+++ b/ScarletChaos/ScarletChaos.csproj
@@ -128,9 +128,9 @@
       <Project>{49ba1c69-6104-41ac-a5d8-b54fa9f696e8}</Project>
       <Name>Lidgren.Network</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ScarletPipeline\ScarletPipeline.csproj">
+    <ProjectReference Include="..\ScarletPipeline\ScarletResource.csproj">
       <Project>{66B36BC4-C3B4-41A1-8EE6-600A24765DBC}</Project>
-      <Name>ScarletPipeline</Name>
+      <Name>ScarletResource</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
