--- a/ScarletChaos/ScarletChaos.csproj
+++ b/ScarletChaos/ScarletChaos.csproj
@@ -128,7 +128,7 @@
       <Project>{49ba1c69-6104-41ac-a5d8-b54fa9f696e8}</Project>
       <Name>Lidgren.Network</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ScarletPipeline\ScarletResource.csproj">
+    <ProjectReference Include="..\ScarletResource\ScarletResource.csproj">
       <Project>{66B36BC4-C3B4-41A1-8EE6-600A24765DBC}</Project>
       <Name>ScarletResource</Name>
     </ProjectReference>
