--- a/ScarletResource/ScarletResource.csproj
+++ b/ScarletResource/ScarletResource.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TextureContents\SolidAnimations.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="PipeLine.cs" />
     <Compile Include="Animation.cs" />
