Very fun stuff :)

--- a/ScarletResource/ScarletResource.csproj
+++ b/ScarletResource/ScarletResource.csproj
@@ -60,6 +60,9 @@
     <Content Include="Assets\Textures\Icon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Textures\kirbytest.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
