Fixed large blunder and refactored sprite loader a bit

--- a/ScarletResource/ScarletResource.csproj
+++ b/ScarletResource/ScarletResource.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Collision.cs" />
     <Compile Include="MapObjects\Tile.cs" />
+    <Compile Include="TextureContents\EntitySprites.cs" />
     <Compile Include="TextureContents\SolidSprites.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="PipeLine.cs" />
