--- a/ScarletResource/ScarletResource.csproj
+++ b/ScarletResource/ScarletResource.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Collision.cs" />
     <Compile Include="MapObjects\Tile.cs" />
+    <Compile Include="FontContent.cs" />
     <Compile Include="TextureContents\EntitySprites.cs" />
     <Compile Include="TextureContents\SolidSprites.cs" />
     <Compile Include="Map.cs" />
@@ -70,7 +71,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Fonts.mgcb">
+    <Content Include="Assets\Fonts\FontArial16.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
