--- a/ScarletChaos/ScarletChaos.csproj
+++ b/ScarletChaos/ScarletChaos.csproj
@@ -50,11 +50,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
@@ -80,24 +79,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Camera.cs" />
-    <Compile Include="DataUtility\IniFile.cs" />
-    <Compile Include="DataUtility\PlayerOptions.cs" />
-    <Compile Include="DataUtility\ScreenSize.cs" />
-    <Compile Include="DebugLog.cs" />
-    <Compile Include="Entities\Components\EntityComponentMovement.cs" />
-    <Compile Include="Entities\EntityPlayer.cs" />
-    <Compile Include="Entities\E_Template.cs" />
-    <Compile Include="Entities\EntityPlayable.cs" />
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="EntityAI\NpcAI.cs" />
-    <Compile Include="ExtensionMath.cs" />
-    <Compile Include="GameInstance.cs" />
-    <Compile Include="DataUtility\GraphicsOptions.cs" />
-    <Compile Include="InputOptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataUtility\Team.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -107,15 +90,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="EngineDesignWorks.txt" />
-    <Content Include="Icon.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -130,9 +104,7 @@
       <Name>ScarletResource</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <PropertyGroup>
