--- a/ScarletResource/ScarletResource.csproj
+++ b/ScarletResource/ScarletResource.csproj
@@ -75,8 +75,10 @@
     <Folder Include="Assets\Maps\" />
     <Folder Include="Assets\Music\" />
     <Folder Include="Assets\Sounds\" />
+    <Folder Include="Assets\Textures\Entities\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Textures\Masks\MaskPlayerBase.png" />
     <Content Include="Assets\Textures\Icon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -87,9 +89,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="EngineDesignWorks.txt" />
-    <Content Include="Icon.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Fonts\FontArial16.xnb">
